--- a/models/galp5/coreboot.config
+++ b/models/galp5/coreboot.config
@@ -1,5 +1,6 @@
 CONFIG_VENDOR_SYSTEM76=y
 CONFIG_BOARD_SYSTEM76_GALP5=y
+CONFIG_ADD_FSP_BINARIES=y
 CONFIG_CCACHE=y
 CONFIG_CONSOLE_SERIAL=n
 CONFIG_CPU_MICROCODE_CBFS_EXTERNAL_BINS=y
@@ -10,6 +11,8 @@ CONFIG_IFD_BIN_PATH="$(FIRMWARE_OPEN_MODEL_DIR)/fd.rom"
 CONFIG_ME_BIN_PATH="$(FIRMWARE_OPEN_MODEL_DIR)/me.rom"
 CONFIG_PAYLOAD_ELF=y
 CONFIG_PAYLOAD_FILE="$(FIRMWARE_OPEN_UEFIPAYLOAD)"
+CONFIG_PCIEXP_HOTPLUG_MEM=0x2000000
+CONFIG_PCIEXP_HOTPLUG_PREFETCH_MEM=0x20000000
 CONFIG_POST_IO=n
 CONFIG_RUN_FSP_GOP=y
 CONFIG_SMMSTORE=y
